force-app/main/default/objects/Individual_Report__c/Individual_Report__c.object-meta.xml
<CustomObject>
    <description>Individual Generated Shift Reports</description>
    <label>Shift Report Details</label>
    <nameField>
        <displayFormat>SR-{0}</displayFormat>
        <label>Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>