force-app/main/default/objects/Individual_Report__c/fields/Date_of_Report__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Report__c</fullName>
    <label>Date of Report</label>
    <type>Date</type>
</CustomField>