force-app/main/default/objects/Individual_Report__c/fields/Report_Details__c.field-meta.xml
<CustomField>
    <fullName>Report_Details__c</fullName>
    <label>Report Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>