force-app/main/default/objects/Individual_Report__c/fields/Shift_Report__c.field-meta.xml
<CustomField>
    <fullName>Shift_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shift Report</label>
    <referenceTo>Shift_Report__c</referenceTo>
    <relationshipName>Individual_Report</relationshipName>
    <type>Lookup</type>
</CustomField>