force-app/main/default/objects/Individual_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Shift__c</columns>
    <columns>Date_of_Report__c</columns>
    <columns>Number_of_Cases__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>